# Destiny2-Xur

./: .env.exemplo  .gitignore  README.md  api.py  const.py  main.py  pyproject.toml
aplicacao/: api.py
entidades/: informacao_xur.py  item.py  lista_de_ids.py
eventos/: eventos.py  eventos_xur.py
log/: logs.py
