[tool.poetry]
name = "destiny"
version = "0.1.0"
description = ""
authors = ["GiovanyLima <giovanylima.cruz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
black = "22.12.0"
requests = "2.28.1"
python-dotenv = "0.21.0"
requests-toolbelt = "0.10.1"
dataclass-type-validator = "0.1.2"
loguru = "0.6.0"
pydantic = "1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
